Add state to plugins, pause flows on upgrade